feature: add personalization in tags
